// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> mount with auth 1`] = `
<header
  className="header"
>
  <nav>
    <Link
      to="/rating"
    >
       Рейтинг 
    </Link>
    <Link
      to="/training"
    >
       Тренировка 
    </Link>
    <span
      className="header__logout-button"
    >
       Выход 
    </span>
  </nav>
</header>
`;

exports[`<Header /> mount without auth 1`] = `
<header
  className="header"
>
  <nav>
    <Link
      to="/rating"
    >
       Рейтинг 
    </Link>
    <Link
      to="/training"
    >
       Тренировка 
    </Link>
    <Link
      className="header__login-button"
      to="/auth/login"
    >
       Вход 
    </Link>
  </nav>
</header>
`;
